# BEvAn

./: .dockerignore  .gitignore  AnnihilationExtractor.py  CLAUDE.md  CLAUDE_CODE_REVIEW.md  Dockerfile  README.md  SCOREBOARD.md  SCOREBOARD_V3.md  SCOREBOARD_V4.md  SCOREBOARD_V5.md  SKILLS.md  analysis.py  archive.py  cosi.def  distributions.py  filters.py  install_cositools.sh  install_torch.sh  main.py  plots.py  pyproject.toml  pytest.ini  ruff.toml  run.py  simulation.py  utils.py
.claude/agents/: code-quality-reviewer.md  megalib-reviewer.md  performance-reviewer.md  physics-reviewer.md  review-orchestrator.md
.claude/commands/: cosi-review.md
.claude/memory/: MEMORY.md  annihilation-angle-weaknesses.md  betadecay-classifier-state.md  cosi-working-style.md  dataset-fitness-clean511.md  energy-specificity-vs-generic-geometry.md  exhausted-levers.md  geometry-complexity.md  gpu-friendliness-branch.md  gt-tolerance-ablation.md  hit-multiplicity-bucketing.md  naive-bayes-dependence-accepted.md  no-megalib-on-this-mac.md  no-underscore-prefixed-names.md  torch-combinations-slow.md
.github/workflows/: build_sif.yml  docs.yml  tests.yml  unit_tests.yml
RL_POLICY/: EVENT_RECONSTRUCTION_THEORY.md  RL_V1.md  RL_V2.md  RL_V3.md  RL_V4.md  RL_V5.md  RL_V6.md  SCOREBOARD_V1.md
ablations/: 511_heuristic.py  arm_as_deltaE.py  base.py  dedicated_prior.py  deltaE_only.py  factor_contributions.py  gt_tolerance.py  harness.py  label_window.py  learned_weights.py  main.py  naive_511_cut.py  no_anni.py  no_calibration.py  no_ckd_order.py  plots.py  pooled.py  tables.py  timing.py
configs/: config.yaml  likelihoods.yaml  preprocessing.yaml  wandb.yaml
data/: .gitattributes  info.md
data/cosima/: ActivationStep1.source  ActivationStep2.source  ActivationStep3.source
docs/: MEGAlib.md  Makefile  event_reconstruction.md  math.md  simulation.md  test-summary.md
docs/source/: conf.py  index.md
experiments/: arm_tuning.py  compton_kinematics_beta_decay_overlap.py  energy_tuning.py  kn_tuning.py  likelihoods_tuning.py  posterior_tuning.py  tensor_tuning.py
experiments/diagnostics/: energy_diagnostics.py  ground_truths.py  posterior_diagnostics.py
mathematics/: calculations.py  geometry.py
physics/: annihilation_detection.py  annihilation_detection_utils.py  bayesian_annihilation.py  event_processing.py  filters.py  ground_truths.py  likelihoods.py  matrix_calculations.py  posterior.py
results/: 2026-06-23_06-25-48.csv  2026-06-23_09-38-25.csv  2026-06-23_14-04-29.csv  2026-06-24_04-34-52.csv  2026-06-24_04-51-45.csv  2026-06-24_05-25-45.csv  2026-06-24_06-45-28.csv  2026-06-24_07-05-16.csv  2026-06-24_07-28-46.csv  2026-06-24_09-17-51.csv
scripts/: compare_angle_features.py  diag_anni_realizable.py  diag_anni_score_ab.py  diag_ceiling.py  diag_ckd_filter.py  diag_deltaE_only_ceiling.py  diag_deltaE_shape.py  diag_event_structure.py  diag_extended_anni_ab.py  diag_multivariate_ceiling.py  diag_population_correction.py  diag_structure_ab.py  diag_tra_crossref.py  generate_example_plots.py  generate_test_summary.py  run_ablations.sh  test_extended_anni.py  test_population_correction.py  test_tuning.py
src/: simulation.py
tests/: conftest.py  data_generator_config.py  fake_megalib.py  synthetic_data_generator.py  test.tra  test_annihilation_detection.py  test_fake_megalib.py  test_filters.py  test_save_load.py
utils/: calculations.py  logger.py  plots.py  reader_extraction.py  sequence_ordering.py  synthetic_data_generator.py
(+321 files in other folders)
