[project]
name = "betadecay"
version = "0.1.0"
description = "Physics-based likelihood classifier for β⁺ (511 keV) annihilation events in COSI simulations"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.26.4",
    "ruff>=0.12.11",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "wandb>=0.23.0",
    "weave>=0.52.17",
    "seaborn>=0.13.2",
    "matplotlib>=3.8.2",
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "tqdm>=4.67.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.15.3",
]

# Ruff configuration lives in the standalone ruff.toml (it takes precedence
# over any [tool.ruff] block here, so keeping it there avoids a silent override).

[tool.pytest.ini_options]
# src/betadecay-analysis/ (not "src") is what lands on sys.path when the entry
# scripts run, so the test suite imports the top-level packages from there too.
pythonpath = ["src/betadecay-analysis"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
